--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script src="./script/app.js"></script>
 
     <!-- Music -->
-    <audio id="backgroundMusic" autoplay loop>
-        <source src="music/birthday.mp3" type="audio/mpeg">
+    <audio id="backgroundMusic" controls>
+        <source src="./music/birthday.mp3" type="audio/mpeg">
     </audio>
 </body>
 
