--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./script/app.js"></script>
 
     <!-- Music -->
-    <audio id="backgroundMusic" autoplay loop>
+    <audio id="backgroundMusic" controls loop>
         <source src="./music/birthday.mp3" type="audio/mpeg">
     </audio>
 </body>
